[package]
name = "join-string"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "Join the elements of iterators as a string, interspersing a separator between all elements."
readme = "README.md"
homepage = "https://github.com/panzi/rust-join-string"
repository = "https://github.com/panzi/rust-join-string"
keywords = ["string"]
categories = ["value-formatting"]
exclude = [
    ".github",
    "**/.gitignore",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
